# printer

./: CMakeLists.txt
TestTask/libs/complex/: CMakeLists.txt
TestTask/libs/complex/include/complex/: complex.h  createComplex.h  createComplexFromPhase.h  createComplexFromPhaseDeg.h
TestTask/libs/complex/test/: complex_test.cpp  main.cpp
TestTask/libs/threads/: CMakeLists.txt  threads.cpp
TestTask/libs/threads/include/threads/: dataMsg.h  myQueue.h  reader.h  writer.h
TestTask/libs/threads/sourse/: threads.cpp
TestTask/libs/threads/test/: RW_test.cpp  main.cpp  queue_test.cpp
